--- a/web app/flask/templates/studentpage1.html
+++ b/web app/flask/templates/studentpage1.html
@@ -12,7 +12,7 @@
 
 	<body>
 
-		<a href="login.html">Back</a>
+		<a href="login.html">To Login</a>
 
 		<div class='classname'>
 			<h1 class='classtitle'>Class Name</h1>
