--- a/web app/flask/templates/teacher.html
+++ b/web app/flask/templates/teacher.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Teacher Page</title>
+		<script> var problem = false; </script> 
+		<script> type ='text/javascript' src='html/teacher.html'></script>
+		<script> console.log(problem) </script>
 	</head>
 
 	<body>
