worked on run.py and login/student.html

--- a/steakhouse/templates/studentpage1.html
+++ b/steakhouse/templates/studentpage1.html
@@ -15,8 +15,8 @@
 		<a href="login.html">Back</a>
 
 		<div class='classname'>
-			<h1 class='classtitle'>Class Name</h1>
-			<h2 class='studentname'>Student Name</h2>
+			<h1 class='classtitle'>class title</h1>
+			<h2 class='studentname'>{{name}}</h2>
 		</div>
 
 		<script>
