worked on run.py

--- a/steakhouse/templates/studentpage1.html
+++ b/steakhouse/templates/studentpage1.html
@@ -16,7 +16,7 @@
 
 		<div class='classname'>
 			<h1 class='classtitle'>class title</h1>
-			<h2 class='studentname'>{{name}}</h2>
+			<h2 class='studentname'>{{'name'}}</h2>
 		</div>
 
 		<script>
